--- a/index.html
+++ b/index.html
@@ -1,4 +1,47 @@
 <!DOCTYPE html>
 <html>
-    Tühi leht
+    <head>
+        <title> Mida teha kui on igav? </title>
+
+    </head>
+    <body>
+
+        <h1> Tudengikood: 213471IACB </h1>
+        <table>
+            <h1> Kui suur on igavustase?(1 natuke igav, 5 väääääga igav) </h1>
+            <tr>
+                <th> Igavustase </th>
+                <th> Mida teha? </th>
+            </tr>
+            <tr>
+                <td> 1 </td>
+                <td> Vaadata lakke. </td>
+            </tr>
+            <tr>
+                <td> 2 (Kui lakke vaatamine ei aidanud) </td>
+                <td> Koristada tuba. </td>
+            </tr>
+            <tr>
+                <td> 3 </td>
+                <td> Lugeda raamatut. </td>
+            </tr>
+            <tr>
+                <td> 4 </td>
+                <td> Jalutada (Vahet pole, mis ilm seal on.Ikka jalutada, sest SEE ON TERVISELE HEA!) </td>
+            </tr>
+            <tr>
+                <td> 5 </td>
+                <td> Vaadata Youtube'st <a href="https://www.youtube.com/watch?v=LKPwKFigF8U">videot</a> </td>
+            </tr>
+        </table>
+
+        <p> Muidugi väga kahju, kui Teil üldse selline olukord tekib, aga selleks on lahendus. Kui teete eelmainitud
+             lahendusi, siis kindlasti saate igavusest ka lahti. Veel üks soovitus oleks võtta enda peale paljupalju
+              kohustusi, mis lihtsalt ei jätaks Teile vaba aega. Works every time! </p>
+
+        <img src="./igav_pilt.jpg" alt="Siia peaks tulema igav pilt.">
+        <br>
+        <a href="https://taltech.ee">Taltechi koduleht</a>
+
+    </body>
 </html>
